# notre

./: .gitignore  .tm_properties  CLAUDE.md  CMakeLists.txt  Makefile  NOTES.md  NOTICE  README.md  clang-bench.txt  conanfile.py  future.cpp  gcc-bench.txt  notre.cppm
.conan/: build.py
.conan/test_package/: conanfile.py  test_package.cpp
.github/workflows/: tests.yml
docs/: api.rst  conf.py  examples.rst  index.rst  regex_syntax.rst
examples/: .gitignore  Makefile  README.md  callouts.cpp  conditionals.cpp  ctll-utilities.cpp  cxx17-syntax.cpp  extract-date.cpp  flags-and-modes.cpp  lexer.cpp  match-basics.cpp  match-point-reset.cpp  named-captures.cpp  search-all.cpp  split-tokenize.cpp  subroutines.cpp  unicode.cpp
include/: ctll.hpp  notre-unicode.hpp  notre.hpp  unicode-db.hpp
include/ctll/: callout.hpp  fixed_string.hpp  function.hpp  map.hpp
include/ctre/: atoms.hpp  callouts.hpp  evaluation.hpp  find_captures.hpp  first.hpp  flags_and_modes.hpp  functions.hpp  literals.hpp  pcre.gram  pcre.hpp  pcre_actions.hpp  resolve_subroutines.hpp  rotate.hpp  wrapper.hpp
include/ctre/actions/: asserts.inc.hpp  callout.inc.hpp  characters.inc.hpp  comment.inc.hpp  conditional.inc.hpp  hexdec.inc.hpp  properties.inc.hpp  sequence.inc.hpp  subroutine.inc.hpp
include/notre/: assert.hpp  atoms.hpp  atoms_characters.hpp  atoms_unicode.hpp  callouts.hpp  debug.hpp  diagnostics.hpp  evaluation.hpp  find_captures.hpp  first.hpp  flags_and_modes.hpp  functions.hpp  id.hpp  iterators.hpp  literals.hpp  operators.hpp  pcre.gram  pcre.hpp  pcre_actions.hpp  range.hpp  resolve_subroutines.hpp  return_type.hpp  rotate.hpp  starts_with_anchor.hpp  utf8.hpp  utility.hpp  wrapper.hpp
include/notre/actions/: asserts.inc.hpp  atomic_group.inc.hpp  backreference.inc.hpp  boundaries.inc.hpp  callout.inc.hpp  capture.inc.hpp  characters.inc.hpp  class.inc.hpp  comment.inc.hpp  conditional.inc.hpp  fusion.inc.hpp  hexdec.inc.hpp  look.inc.hpp  mode.inc.hpp  named_class.inc.hpp  options.inc.hpp  properties.inc.hpp  repeat.inc.hpp  sequence.inc.hpp  set.inc.hpp  subroutine.inc.hpp
include/unicode-db/: unicode-db.hpp
single-header/: notre-unicode.hpp  notre.hpp
tests/: CMakeLists.txt  __utf8.cpp  _bad_cycle.cpp  _callouts.cpp  _fixed-string.cpp  _function.cpp  _map.cpp  _unicode.cpp  ci.cpp  cnttp.cpp  correct-conversion.cpp  diagnostics.cpp  gcc8.cpp  generating.cpp  gets.cpp  is_prime.cpp  many-of-same-proto.cpp  matching.cpp  matching2-msvc-greedy.cpp  matching2.cpp  matching3.cpp  mode.cpp  msvc.cpp  parsing.cpp  range.cpp  results.cpp  trampoline.cpp  wide-pattern.cpp  z_matching.cpp
tests/benchmark/: many-of-different-ctll.cpp  many-of-different-x5-ctll.cpp  many-of-same-ctll.cpp  many-of-same-proto.cpp  same.cpp  unique.cpp
tests/benchmark-exec/: .tm_properties  Makefile  common.hpp  notre.cpp
tests/benchmark-range/: measurement.cpp
